# virtualfret-vst

./: .gitignore  CMakeLists.txt  README.ja.md  README.md  SPEC.ja.md  SPEC.md
assets/: chord-shapes.json  tunings.json
scripts/: install-plugins.sh  package-release.sh
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/core/: ChordShapeLibrary.cpp  ChordShapeLibrary.h  FretModel.cpp  FretModel.h  Localization.cpp  Localization.h  StrumScheduler.h  TuningLibrary.cpp  TuningLibrary.h
src/ui/: BoardGeometry.h  FretboardComponent.cpp  FretboardComponent.h  HeadstockComponent.cpp  HeadstockComponent.h  StrumZoneComponent.cpp  StrumZoneComponent.h  Theme.h  ToolbarComponent.cpp  ToolbarComponent.h
tests/: CoreTests.cpp
